test/fail_compilation/fail356b.d
import imports.fail356 : bar;
int bar; // collides with selective import
static assert(0);
